[package]
name = "leptos-markdown"
version = "0.1.0"
edition = "2021"
description = "A component which can render markdown as html element in leptos"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nomorechokedboy/leptos-markdown"
repository = "https://github.com/nomorechokedboy/leptos-markdown"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.6.15", features = ["csr", "nightly"] }
log = "0.4.22"
markdown = "1.0.0-alpha.21"
once_cell = "1.20.2"
regex = "1.11.0"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"]}
