[package]
name = "leptos-markdown"
version = "0.1.0"
edition = "2021"
description = "A component which can render markdown as html element in leptos"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nomorechokedboy/leptos-markdown"
repository = "https://github.com/nomorechokedboy/leptos-markdown"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.6.15", features = ["csr", "nightly"] }
log = "0.4.22"
markdown = "1.0.0-alpha.21"
regex = "1.11.1"

[lib]
crate-type = ["cdylib", "rlib"]

